Browse category are done

--- a/index.html
+++ b/index.html
@@ -41,6 +41,84 @@
             <button class="button">POST A JOB</button>
         </div>
     </header>
+    <section class="hero container">
+        <div class="hero__text">
+            <h2 class="hero__text-heading">Find the career you deserve</h2>
+            <p class="hero__text-info">Aliquam vestibulum cursus felis. In iaculis iaculis sapien ac condimentum.
+                Vestibulum congue posuere lacus, id tincidunt nisi porta sit amet.</p>
+            <div class="hero__text-button">
+                <button class="button btn-1">SEE OUR JOBS</button>
+                <button class="button btn-2">SEARCH JOBS</button>
+            </div>        
+        </div>
+        <div class="hero__image">
+            <img src="./images/img-1.png" alt="hero image"/>
+        </div>
+    </section>
+    <section class="categories container">
+        <div class="categories__heading">
+            <h2>Browse Categories</h2>
+            <p>Most popular categories of portal, sorted by popularity</p>
+        </div>
+        <div class="categories__content">
+            <div class="item">
+                <i class="fas fa-house-damage icon icon-1"></i>
+                <div class="item__text">
+                    <h4>Administrator</h4>
+                    <p>(4286 jobs)</p>
+                </div>
+            </div>
+            <div class="item">
+                <i class="fas fa-globe icon icon-2"></i>
+                <div class="item__text">
+                    <h4>Data Science</h4>
+                    <p>(2000 jobs)</p>
+                </div>
+            </div>
+            <div class="item">
+                <i class="fas fa-book icon icon-3"></i>
+                <div class="item__text">
+                    <h4>Design</h4>
+                    <p>(1450 jobs)</p>
+                </div>
+            </div>
+            <div class="item">
+                <i class="fas fa-desktop icon icon-4"></i>
+                <div class="item__text">
+                    <h4>Development</h4>
+                    <p>(5100 jobs)</p>
+                </div>
+            </div>
+            <div class="item">
+                <i class="fas fa-brush icon icon-5"></i>
+                <div class="item__text">
+                    <h4>Engineering</h4>
+                    <p>(5079 jobs)</p>
+                </div>
+            </div>
+            <div class="item">
+                <i class="far fa-heart icon icon-6"></i>
+                <div class="item__text">
+                    <h4>Programmer</h4>
+                    <p>(3235 jobs)</p>
+                </div>
+            </div>
+            <div class="item">
+                <i class="fas fa-filter icon icon-7"></i>
+                <div class="item__text">
+                    <h4>Security</h4>
+                    <p>(1800 jobs)</p>
+                </div>
+            </div>
+            <div class="item">
+                <i class="fas fa-trophy icon icon-8"></i>
+                <div class="item__text">
+                    <h4>System Analyst</h4>
+                    <p>(4286 jobs)</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
 </body>
 </html>
