Featured job section done

--- a/index.html
+++ b/index.html
@@ -119,6 +119,133 @@
             </div>
         </div>
     </section>
+    <section class="feature container">
+            <div class="feature__heading">
+                <h3>Featured Jobs</h3>
+                <p>As the world's #1 job 
+                    site, with over 200 million unique visitors every month 
+                    from over 60 different countries
+                </p>
+            </div>
+            <div class="feature__content">
+                <div class="card ">
+                    <div class="card-content">
+                    <div class="card__image">
+                        <img src="./images/feature-1.png" alt="card" />
+                    </div>
+                    <div class="card__text">
+                        <div class="card__text-heading"> 
+                            <h4>Software Engineer</h4>
+                            <p>MizTech</p>
+                        </div>
+                        <div class="card__text-info1">
+                            <p><i class="fas fa-map-marker-alt"></i> New York</p>
+                            <p><i class="far fa-user"></i>  Jhon Smith</p>
+                        </div>
+                        <p class="card__text-btn g">FULL TIME</p>
+                    </div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-content">
+                    <div class="card__image">
+                        <img src="./images/feature-2.png" alt="card" />
+                    </div>
+                    <div class="card__text">
+                        <div class="card__text-heading">
+                            <h4>Graphic Designer</h4>
+                            <p>Hunter Inc.</p>
+                        </div>
+                        <div class="card__text-info1">
+                            <p><i class="fas fa-map-marker-alt"></i> New York</p>
+                            <p><i class="far fa-user"></i>  Jhon Smith</p>
+                        </div>
+                        <p class="card__text-btn r">PART TIME</p>
+                    </div>
+                    </div>
+                </div>
+
+
+                <div class="card">
+                <div class="card-content">
+                    <div class="card__image">
+                        <img src="./images/feature-3.png" alt="card" />
+                    </div>
+                    <div class="card__text">
+                        <div class="card__text-heading">
+                            <h4>Managing Director</h4>
+                            <p>MagNews</p>
+                        </div>
+                        <div class="card__text-info1">
+                            <p><i class="fas fa-map-marker-alt"></i> New York</p>
+                            <p><i class="far fa-user"></i>  Jhon Smith</p>
+                        </div>
+                        <p class="card__text-btn g">FULL TIME</p>
+                    </div>
+                </div>
+
+                </div>
+
+                <div class="card">
+                <div class="card-content">
+                    <div class="card__image">
+                        <img src="./images/feature-4.png" alt="card" />
+                    </div>
+                    <div class="card__text">
+                        <div class="card__text-heading">
+                            <h4>Software Engineer</h4>
+                            <p>AmazeSoft</p>
+                        </div>
+                        <div class="card__text-info1">
+                            <p><i class="fas fa-map-marker-alt"></i> New York</p>
+                            <p><i class="far fa-user"></i>  Jhon Smith</p>
+                        </div>
+                        <p class="card__text-btn g">FULL TIME</p>
+                    </div>
+                </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-content">
+                    <div class="card__image">
+                        <img src="./images/feature-5.png" alt="card" />
+                    </div>
+                    <div class="card__text">
+                        <div class="card__text-heading">
+                            <h4>Graphic Designer</h4>
+                            <p>Bingo</p>
+                        </div>
+                        <div class="card__text-info1">
+                            <p><i class="fas fa-map-marker-alt"></i> New York</p>
+                            <p><i class="far fa-user"></i>  Jhon Smith</p>
+                        </div>
+                        <p class="card__text-btn r">PART TIME</p>
+                    </div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-content">
+                    <div class="card__image">
+                        <img src="./images/feature-1.png" alt="card" />
+                    </div>
+                    <div class="card__text">
+                        <div class="card__text-heading">
+                            <h4>Managing Director</h4>
+                            <p>MagNews</p>
+                        </div>
+                        <div class="card__text-info1">
+                            <p><i class="fas fa-map-marker-alt"></i> New York</p>
+                            <p><i class="far fa-user"></i>  Jhon Smith</p>
+                        </div>
+                        <p class="card__text-btn g">FULL TIME</p>
+                    </div>
+                </div>
+                    </div>
+            </div>
+            <button class="feature__btn button">BROWSE ALL JOBS</button>
+    </section>
 
 </body>
 </html>
