Top Hiring Companies shown to the UI

--- a/index.html
+++ b/index.html
@@ -246,6 +246,66 @@
             </div>
             <button class="feature__btn button">BROWSE ALL JOBS</button>
     </section>
+    <section class="companies container">
+        <div class="companies__heading">
+            <h3>Top Hiring Companies</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ellentesque dignissim quam et
+                metus effici turac fringilla lorem facilisis.
+            </p>
+        </div>
+        <div class="companies__content">
+            <div class="company__details">
+
+                <div class="comapny">
+                    <div class="company__image">
+                        <img src="./images/company-1.png" alt="image" />
+                    </div>
+                    <div class="company__content">
+                        <h4>Amaze Tech</h4>
+                        <div class="company__content-info">
+                            <p><i class="fas fa-briefcase"></i> Software Company</p>
+                            <p><i class="fas fa-map-marker-alt"></i> New York</p>
+                        </div>
+                        <button class="button">
+                            5 OPEN JOB
+                        </button>
+                    </div>
+                </div>
+                <div class="comapny">
+                    <div class="company__image">
+                        <img src="./images/company-2.png" alt="image" />
+                    </div>
+                    <div class="company__content">
+                        <h4>FaceBook</h4>
+                        <div class="company__content-info">
+                            <p><i class="fas fa-briefcase"></i> Software Company</p>
+                            <p><i class="fas fa-map-marker-alt"></i> New York</p>
+                        </div>
+                        <button class="button">
+                            5 OPEN JOB
+                        </button>
+                    </div>
+                </div>
+                <div class="comapny">
+                    <div class="company__image">
+                        <img src="./images/company-3.png" alt="image" />
+                    </div>
+                    <div class="company__content">
+                        <h4>MagNews</h4>
+                        <div class="company__content-info">
+                            <p><i class="fas fa-briefcase"></i> Software Company</p>
+                            <p><i class="fas fa-map-marker-alt"></i> New York</p>
+                        </div>
+                        <button class="button">
+                            5 OPEN JOB
+                        </button>
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
+    </section>
 
 </body>
 </html>
