Recent job post are done successfully

--- a/index.html
+++ b/index.html
@@ -301,11 +301,64 @@
                         </button>
                     </div>
                 </div>
-
-
             </div>
         </div>
     </section>
+    <section class="jobs container">
+        <div class="jobs__heading">
+            <h3>Recent Job Post</h3>
+            <p>As the world's #1 job site, with over 200 million unique visitors every month from over 60 different countries
+            </p>
+        </div>
+        <div class="jobs__content">
+            <div class="singlejob"> 
+                <img src="./images/feature-1.png" alt="job"/>
+                <div class="singlejob__heading">
+                    <h4>App Developer</h4>
+                    <p>AmazeSoft</p>
+                </div>
+                    <p class="singlejob-text">7 Open Jobs</p>
+                    <p><i class="fas fa-map-marker-alt"></i> New York, US</p>
+                    <p>FULL TIME</p>
+                    <button><a href='apply_job_process.php'>APPLY NOW</a></button>
+            </div>
+            <div class="singlejob"> 
+                <img src="./images/feature-2.png" alt="job"/>
+                <div class="singlejob__heading">
+                    <h4>App Developer</h4>
+                    <p>AmazeSoft</p>
+                </div>
+                    <p class="singlejob-text">7 Open Jobs</p>
+                    <p><i class="fas fa-map-marker-alt"></i> New York, US</p>
+                    <p>FULL TIME</p>
+                    <button><a href='apply_job_process.php'>APPLY NOW</a></button>
+            </div>
+            <div class="singlejob"> 
+                <img src="./images/feature-3.png" alt="job"/>
+                <div class="singlejob__heading">
+                    <h4>App Developer</h4>
+                    <p>AmazeSoft</p>
+                </div>
+                    <p class="singlejob-text">7 Open Jobs</p>
+                    <p><i class="fas fa-map-marker-alt"></i> New York, US</p>
+                    <p>FULL TIME</p>
+                    <button><a href='apply_job_process.php'>APPLY NOW</a></button>
+            </div>
+            <div class="singlejob"> 
+                <img src="./images/feature-4.png" alt="job"/>
+                <div class="singlejob__heading">
+                    <h4>App Developer</h4>
+                    <p>AmazeSoft</p>
+                </div>
+                    <p class="singlejob-text">7 Open Jobs</p>
+                    <p><i class="fas fa-map-marker-alt"></i> New York, US</p>
+                    <p>FULL TIME</p>
+                    <button><a href='apply_job_process.php'>APPLY NOW</a></button>
+            </div>
+            <button class="button job-btn"> LOAD MORE LISTING</button>
+        </div>
+    </section>
+    
 
 </body>
 </html>
