Requird information section done successfully

--- a/index.html
+++ b/index.html
@@ -358,7 +358,46 @@
             <button class="button job-btn"> LOAD MORE LISTING</button>
         </div>
     </section>
-    
+    <section class="info">
+        <div class="info__heading">
+            <h3>How It Works?</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ellentesque dignissim quam et
+                metus effici turac fringilla lorem facilisis.</p>
+        </div>
+        <div class="info__content">
+            <div class="single-info">
+                <i class="fas fa-user info-icon"></i>
+                <h4>Create an Account</h4>
+                <p>Post a job to tell us about your project. We'll quickly match you with the right freelancers find place best.</p>
+            </div>
+            <div class="single-info">
+                <i class="fas fa-search info-icon"></i>
+                <h4>Search Jobs</h4>
+                <p>Post a job to tell us about your project. We'll quickly match you with the right freelancers find place best.</p>
+            </div>
+            <div class="single-info">
+                <i class="fas fa-trophy info-icon"></i>
+                <h4>Apply</h4>
+                <p>Post a job to tell us about your project. We'll quickly match you with the right freelancers find place best.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="main">
+        <div class="recruiter">
+            <h3>I'm Recruiter</h3>
+            <p>Post a job to tell us about your project. We'll quickly match you with
+                the right freelancers find place best</p>
+            <button class="recruiter-btn">Post A Job</button>
+        </div>
+        <div class="jobseeker">
+            <h3>I'm Jobseeker</h3>
+            <p>Post a job to tell us about your project. We'll quickly match you with
+                the right freelancers find place best</p>
+            <button class="jobseeker-btn">Post A Job</button>
+        </div>
+    </section>
+
 
 </body>
 </html>
