Pricing plan section are done with different pricing plan

--- a/index.html
+++ b/index.html
@@ -397,6 +397,57 @@
             <button class="jobseeker-btn">Post A Job</button>
         </div>
     </section>
+    <section class="price container">
+        <div class="price__heading">
+            <h3>Pricing Plan</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ellentesque dignissim quam et
+                metus effici turac fringilla lorem facilisis.</p>
+        </div> 
+        <div class="price__content">
+            <div class="single__price">
+                <div class="professional"></div>
+                <i class="fas fa-rocket"></i>
+                <div class="price__info">
+                    <h3>Professional</h3>
+                    <p>Post 1 Job</p>
+                    <P>No Featured Job</P>
+                    <p>Edit Your Job Listing</p>
+                    <p>Manage Application</p>
+                    <p>30-day Expired</p>
+                    <h4>$<span>0</span>/Month</h4>
+                </div>
+                <button class="price-btn">GET STARTED</button>
+            </div>
+            <div class="single__price">
+                <div class="advance"></div>
+                <i class="fas fa-tint"></i>
+                <div class="price__info">
+                    <h3>Advance</h3>
+                    <p>Post 1 Job</p>
+                    <P>No Featured Job</P>
+                    <p>Edit Your Job Listing</p>
+                    <p>Manage Application</p>
+                    <p>30-day Expired</p>
+                    <h4>$<span>20</span>/Month</h4>
+                </div>
+                <button class="adv-btn button">GET STARTED</button>
+            </div>
+            <div class="single__price">
+                <div class="premium"></div>
+                <i class="fas fa-briefcase"></i>
+                <div class="price__info">
+                    <h3>Premium</h3>
+                    <p>Post 1 Job</p>
+                    <P>No Featured Job</P>
+                    <p>Edit Your Job Listing</p>
+                    <p>Manage Application</p>
+                    <p>30-day Expired</p>
+                    <h4>$<span>40</span>/Month</h4>
+                </div>
+                <button class="price-btn">GET STARTED</button>
+            </div>
+        </div> 
+    </section>
 
 
 </body>
