Blogs section and subscribe section are done

--- a/index.html
+++ b/index.html
@@ -448,6 +448,61 @@
             </div>
         </div> 
     </section>
+    <section class="blog">
+        <div class="blog__heading">
+            <h3>Blog Post</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ellentesque dignissim quam et
+                metus effici turac fringilla lorem facilisis.
+            </p>
+        </div>
+        <div class="blog__content">
+            <div class="blog__card">
+                <div class="blog__card-img">
+                    <img src="/images/img1.jpg" alt="" />
+                </div>
+                <div class="blog__card-info">
+                    <h4>Tips to write an impressive resume online for beginner</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore praesentium asperiores ad vitae.</p>
+                    <a href="#" class="read__more">Read More</a>
+                </div>
+            </div>
+            <div class="blog__card">
+                <div class="blog__card-img">
+                    <img src="/images/img2.jpg" alt="" />
+                </div>
+                <div class="blog__card-info">
+                    <h4>Let's explore 5 cool new features in JobBoard theme</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore praesentium asperiores ad vitae.</p>
+                    <a href="#" class="read__more">Read More</a>
+                </div>
+            </div>
+            <div class="blog__card">
+                <div class="blog__card-img">
+                    <img src="/images/img3.jpg" alt="" />
+                </div>
+                <div class="blog__card-info">
+                    <h4>How to convince recruiters and get your dream job</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore praesentium asperiores ad vitae.</p>
+                    <a href="#" class="read__more">Read More</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="newsletter container">
+        <div class="newsletter__image">
+            <img src="./images/img-2.png" alt="image" />
+        </div>
+        <div class="newsletter__info">
+            <h2>Subscribe Our Newsletter</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit 
+                ellentesque dignissim quam et metus dolor sit amet,.</p>
+            <div class="input">
+                <input type="email" placeholder="Enter Your Email" />
+                <button class="button input-btn">SUBMIT</button>
+            </div>
+        </div>
+    </section>
 
 
 </body>
