--- a/index.html
+++ b/index.html
@@ -503,7 +503,60 @@
             </div>
         </div>
     </section>
+    <section class="footer">
+    <div class="footer__logo">
+        <img src="./images/logo.png" alt="logo"/>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut, nihil sit possimus velit harum ea blanditiis repellat veniam, facere temporibus recusandae atque? Excepturi eveniet.</p>
+        <ul class="social__media">
+            <li><a href="#"><span class="iconify" data-icon="logos:facebook"></span></a></li>
+            <li><a href="#"><span class="iconify" data-icon="logos:twitter"></span></a></li>
+            <li><a href="#"><span class="iconify" data-icon="logos:linkedin-icon"></span></a></li>
+            <li><a href="#"><span class="iconify" data-icon="logos:google-gmail"></span></a></li>
+            
+        </ul>
+    </div>
+    <div class="footer__nav">
+        <h4>Quick Links</h4>
+        <ul class="nav__links">
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Support</a></li>
+            <li><a href="#">License</a></li>
+            <li><a href="#">Privacy</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </div>
+    <div class="footer__links">
+        <h4>All Navigation</h4>
+        <ul class="links">
+            <li><a href="#">Front-end Design</a></li>
+            <li><a href="#">Android Developer</a></li>
+            <li><a href="#">CMS Development</a></li>
+            <li><a href="#">IOS Developer</a></li>
+            <li><a href="#">Iphone Developer</a></li>
+        </ul>
+    </div>
+    <div class="footer__address">
+        <h4>
+            Address
+        </h4>
+        <div class="phone">
+            <span class="iconify" data-icon="clarity:phone-handset-line"></span>
+            <p>+880-123-456-789 <br>
+            +880-123-456-789</p>
+        </div>
+        <div class="email">
+            <span class="iconify" data-icon="eva:email-outline"></span>
+            <p> contact@shopr.com info@shopr.com</p>
+        </div>
+        <div class="location">
+            <span class="iconify" data-icon="akar-icons:location"></span>
+            <p>9923 South Avenue Street, New York City</p>
+        </div>
+    </div>
+</section>
 
 
+    <script src="script.js"></script>
+    <script src="https://code.iconify.design/2/2.0.3/iconify.min.js"></script>
 </body>
 </html>
